@@ -311,6 +311,16 @@ verilog/parser_bugs.v:368: ENDTASKFUNC  'endtask'
 verilog/parser_bugs.v:369: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:371: MODULE  'module' 'bugfor' undef '0'
 verilog/parser_bugs.v:373: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:375: MODULE  'module' 'bug85' undef '0'
+verilog/parser_bugs.v:375: VAR  'parameter' 'T_DATA' 'module' '' 'type' '' 'byte'
+verilog/parser_bugs.v:376: PORT  'data' 'module' '' '' '' '1'
+verilog/parser_bugs.v:377: VAR  'port' 'data' 'module' '' 'T_DATA' '' ''
+verilog/parser_bugs.v:377: PORT  'data' 'module' 'input' 'T_DATA' '' '0'
+verilog/parser_bugs.v:379: INSTANT  'sub' 'sub' ''
+verilog/parser_bugs.v:378: PARAMPIN  'T_DATA' 'T_DATA' '1'
+verilog/parser_bugs.v:379: PIN  'data' 'data' '1'
+verilog/parser_bugs.v:379: ENDCELL  ''
+verilog/parser_bugs.v:380: ENDMODULE  'endmodule'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: VAR  'net' 'b_i' 'module' 'wire' '' '' ''
 verilog/pinorder.v:008: VAR  'net' 'd_o' 'module' 'wire' '' '' ''
