@@ -4,12 +4,19 @@
 
 `include "v_sv_pkg"
 
-module v_sv_mod (v_sv_intf intf);
+interface sv_if_ported (input clk);
+endinterface
+
+module v_sv_mod (v_sv_intf intf, input clk);
 
    // Import types
    import v_sv_pkg::*;
+
+   // Internal interface (unconnected)
+   sv_if_ported if_ported(.clk(clk));
 
    // Grab a program
    v_sv_pgm pgm();
 
 endmodule
+
